# teio-senki

./: .gitignore  AGENT.md  AGENTS.md  Brewfile  CHANGELOG.md  DESIGN.md  Makefile  README.md  SPEC.md  app.py  archive.py  clock.py  engine.py  go.mod  ledger.py  main.py  models.py  pyproject.toml
assets/data/: cities.json  officers.json
cmd/teio/: main.go
data/: cities.yaml  officers.yaml
godot/: project.godot
godot/scenes/: main.tscn  splash.tscn
godot/scripts/: main.gd  splash.gd
godot/scripts/core/: city_economy.gd  city_panel_data.gd  essence.gd  game_clock.gd
godot/scripts/engine/: essence.gd  game_clock.gd  ledger.gd  sovereign_engine.gd
godot/scripts/tests/: test_city_economy.gd  test_city_panel_data.gd  test_runner.gd  test_sovereign_economy.gd
godot/scripts/ui/: main.gd  splash.gd
internal/core/clock/: clock.go  clock_test.go
internal/core/economy/: economy.go  economy_test.go
internal/core/essence/: essence.go  essence_test.go
internal/engine/ledger/: ledger.go  ledger_test.go
internal/engine/sovereign/: sovereign.go  sovereign_test.go
internal/models/: models.go
internal/ui/tui/: mapview.go  scenarios.go  tui.go  view.go
internal/version/: version.go
internal/vm/bridge/: bridge.go
internal/vm/loader/: loader.go
lua/ai/: aggressive.lua
lua/balance/: drift.lua
