[project]
name = "teio-senki"
version = "0.1.0"
description = "Headless grand strategy engine for Sovereign Record: Three Kingdoms Ledger"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
